--- a/src/scss/element/index.scss
+++ b/src/scss/element/index.scss
@@ -29,7 +29,9 @@
 //  );
 
 // if you want to import all
-// @use "element-plus/theme-chalk/src/index.scss" as *;
+//@use 'element-plus/theme-chalk/src/index' as *;
 
 // You can comment it to hide debug info.
 // @debug $--colors;
+
+@use 'element-plus/theme-chalk/src/common/var' as *;
