added media query store

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,16 @@
-@import 'reboot';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+@import 'var';
+@import 'functions';
+@import 'mixins';
+
+@import 'reboot';
+
+:root {
+  --MQ_SM: #{remove-unit($MQ_SM)};
+  --MQ_MD: #{remove-unit($MQ_MD)};
+  --MQ_LG: #{remove-unit($MQ_LG)};
+}
 
 body {
   display: flex;
