add editorjs as wysiwyg

--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -2,4 +2,7 @@ $MQ_SM: 768px;
 $MQ_MD: 992px;
 $MQ_LG: 1200px;
 
+$MQ_EDITOR_SM: 650px;
+
 $BD_COMMON: var(--el-border-width) solid var(--el-border-color);
+$FONT_FAMILY: 'Roboto', sans-serif;
